k8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamflow-rabbitmq
  namespace: teamflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamflow-rabbitmq
  template:
    metadata:
      labels:
        app: teamflow-rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.13-management-alpine
          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: management
          readinessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "check_port_connectivity"]
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: teamflow-rabbitmq
  namespace: teamflow
spec:
  type: ClusterIP
  selector:
    app: teamflow-rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
      name: amqp
    - port: 15672
      targetPort: 15672
      name: management
